Add new card section with image and description

--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@ footer a {
         <h3>Logo con textura</h3>
         <p>Ejemplo de aplicación de color, textura y forma.</p>
       </div>
+      <div class="card">
+        <img src="img/flyer/Flyer2.jpg" alt="Logo 2" />
+        <h3>Logo con textura</h3>
+        <p>Ejemplo de aplicación de color, textura y forma.</p>
+      </div>
     </div>
   </section>  <section id="web">
     <h2>💻 Proyectos Web</h2>
